[package]
name = "slip21"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org"]
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/rust-slip21/"
repository = "https://github.com/stevenroose/rust-slip21/"
documentation = "https://docs.rs/slip21/"
description = "SLIP-21 implementation in Rust"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "slip21"
path = "src/lib.rs"

[dependencies]
bitcoin_hashes = "0.6.0"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
hex = "0.3.2"
